tdf#154858 - FILEOPEN PPTX: fix Radial gradient in shape imported as

a Linear gradient

XML_circle gradients should be always imported as GradientStyle_RADIAL.

Regression from: 898e4ae1364e76af8be22183ac64d73b6a6d8d90

Change-Id: I8166a2afd3dadce61c742eeb0a55a0c8a8b9ada6
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183836
Tested-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>